--- a/astro/src/components/NavBar/header.css
+++ b/astro/src/components/NavBar/header.css
@@ -156,6 +156,8 @@ a {
     width: 100vw;
     height: 5rem;
     background-color: rgba(0,0,0,0.5);
+    -webkit-backdrop-filter: blur(3px);
+    text-shadow: 2px 2px black; 
   }
 
   .logo {
