--- a/astro/src/styles/global.css
+++ b/astro/src/styles/global.css
@@ -110,9 +110,10 @@ body::-webkit-scrollbar-thumb {
 
 main {
   position: relative;  
-  height: 100%;   
+  height: 100vh;   
   margin-left: 260px; 
   margin-right: 0;
+  overflow: hidden;
 }
 
 main .title { 
@@ -564,8 +565,9 @@ button:focus {
     margin-left: 0px;
     padding-bottom: 100px;
     padding: auto;  
-    overflow: auto; 
+    overflow: scroll;  
     width: 100%; 
+    height: 100vh;
   }
   .flex-container.mobile {
     position: relative;
